--- a/.env
+++ b/.env
@@ -20,12 +20,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=mi.goran000@gmail.com
-MAIL_PASSWORD=*******************************
-MAIL_ENCRYPTION=tls
+MAIL_DRIVER=mailgun
+MAILGUN_DOMAIN=sandbox806111752e784d739f0b6888949d6632.mailgun.org
+MAILGUN_SECRET=bb253eec3b7152842a14b579bcf9c6b2
 
 PUSHER_APP_ID=
 PUSHER_KEY=
