--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "mailgun/mailgun-php": "^2.1",
+        "PHPMailer/PHPMailer": "^5.2"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
